tests/rosetta/out/Smalltalk/bitmap-histogram.out
/tmp/bitmap-histogram.st:10: parse error, expected ']'
