tests/rosetta/out/Smalltalk/bitmap-histogram.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:50:28Z
"
| bw h histogram i idx image img lSum lb line main medianThreshold newRow out p printImage row t threshold uSum ub x y |
image := [ | {{0. 0. 10000}. {65535. 65535. 65535}. {65535. 65535. 65535}} ].
histogram := [:g :bins | ((bins <= 0)) ifTrue: [
  bins := (g at: 0 size).
] .
h := {}.
i := 0.
[(i < bins)] whileTrue: [
  h := h copyWith: 0.
  i := (i + 1).
]
.
y := 0.
[(y < (g size))] whileTrue: [
  row := g at: y.
  x := 0.
  [(x < (row size))] whileTrue: [
    p := row at: x.
    idx := ((p * (bins - 1)) / 65535) asInteger.
    h at: idx put: (h at: idx + 1).
    x := (x + 1).
  ]
  .
  y := (y + 1).
]
.
h ].
medianThreshold := [:h | lb := 0.
ub := ((h size) - 1).
lSum := 0.
uSum := 0.
[(lb <= ub)] whileTrue: [
  (((lSum + h at: lb) < (uSum + h at: ub))) ifTrue: [
    lSum := (lSum + h at: lb).
    lb := (lb + 1).
  ] ifFalse: [
    uSum := (uSum + h at: ub).
    ub := (ub - 1).
  ].
]
.
((ub * 65535) / (h size)) asInteger ].
threshold := [:g :t | out := {}.
y := 0.
[(y < (g size))] whileTrue: [
  row := g at: y.
  newRow := {}.
  x := 0.
  [(x < (row size))] whileTrue: [
    ((row at: x < t)) ifTrue: [
      newRow := newRow copyWith: 0.
    ] ifFalse: [
      newRow := newRow copyWith: 65535.
    ].
    x := (x + 1).
  ]
  .
  out := out copyWith: newRow.
  y := (y + 1).
]
.
out ].
printImage := [:g | y := 0.
[(y < (g size))] whileTrue: [
  row := g at: y.
  line := ''.
  x := 0.
  [(x < (row size))] whileTrue: [
    ((row at: x = 0)) ifTrue: [
      line := (line + '0').
    ] ifFalse: [
      line := (line + '1').
    ].
    x := (x + 1).
  ]
  .
  Transcript show: (line) printString; cr.
  y := (y + 1).
]
. ].
main := [ | img := image value.
h := histogram value: img value: 0.
Transcript show: (('Histogram: ' + (h asString))) printString; cr.
t := medianThreshold value: h.
Transcript show: (('Threshold: ' + (t asString))) printString; cr.
bw := threshold value: img value: t.
printImage value: bw. ].
main value.
